Other Assets alignment issue solved

--- a/src/styles.css
+++ b/src/styles.css
@@ -4110,7 +4110,7 @@ mat-step-header .mat-step-label.mat-step-label-active {
 }
 
 .spc-blw {
-  margin-bottom:80px;
+  margin-bottom:110px;
 }
 
 .mat-expansion-panel-header {
